--- a/public/index.html
+++ b/public/index.html
@@ -40,7 +40,7 @@
     rel="stylesheet"
   />
   <title>
-    W Pasar</title>
+    W-Pasar</title>
   <meta name="description" content="" />
   <meta name="author" content="@FerlyApiang" />
 </head>
